# neuropixels-pxi

./: .gitignore  .gitmodules  CMakeLists.txt  Ph2C_notes.txt  README.md  conanfile.txt
.github/conan_profiles/: macos-15-arm64  macos-15-x64  ubuntu-22.04-x64  windows-2022-x64
.github/workflows/: build.yml  publish.yml  windows.yml
Aux_Source/Mock NPAPI/: CMakeLists.txt
Aux_Source/Mock NPAPI v3/: CMakeLists.txt
Aux_Source/Mock NPAPI v3/src/: NeuropixAPI.cpp  NeuropixAPI.hpp
Aux_Source/Mock NPAPI/src/: NeuropixAPI.h  debugutil.h  main.c  neuropixAPI.c  util.h
Enclustra_Windows_10/: EnPcieDriverWin.inf  EnPcieDriverWin.sys  Version_1.9_ReadMe.txt  enpciedriverwin.cat
NeuropixPlugin/NeuropixPlugin/: NeuropixComponents.cpp  NeuropixComponents.h  NeuropixEditor.cpp  NeuropixEditor.h  NeuropixPlugin.vcxproj  NeuropixPlugin.vcxproj.filters  NeuropixThread.cpp  NeuropixThread.h  OpenEphysLib.cpp
NeuropixPlugin/NeuropixPlugin/neuropix-api/: BaseConfiguration.h  NeuropixAPI.h  NeuropixAPI_private.h
NeuropixPlugin/NeuropixPlugin/resources/: NeuropixAPI_x64_1_11.lib  NeuropixAPI_x64_1_17.lib  NeuropixAPI_x64_1_6.lib  NeuropixAPI_x86_1_11.lib  NeuropixAPI_x86_1_17.lib
Resources/: merge_universal.sh
Resources/xdaq_npapi/: conanfile.py
Source/: NeuropixCanvas.cpp  NeuropixCanvas.h  NeuropixComponents.cpp  NeuropixComponents.h  NeuropixEditor.cpp  NeuropixEditor.h  NeuropixThread.cpp  NeuropixThread.h  OneBoxThread.h  OpenEphysLib.cpp  PXIThread.h  SimulatedComponents.cpp  SimulatedComponents.h  Utils.h  XDAQThread.h
Source/API/: NeuropixAPI.h
Source/API/lib64/: NeuropixAPI_x64_3_70_1.lib  NeuropixAPI_x64_4_0_0.lib  NeuropixAPI_x64_4_1_2.lib
Source/API/v1/: NeuropixAPI.h
Source/API/v3/: NeuropixAPI.h
Source/API/v3/lib64/: NeuropixAPI_x64_3_40.lib  NeuropixAPI_x64_3_41.lib  NeuropixAPI_x64_3_42.lib
Source/Basestations/: Basestation_opto.cpp  Basestation_opto.h  Basestation_v1.cpp  Basestation_v1.h  Basestation_v3.cpp  Basestation_v3.h  OneBox.cpp  OneBox.h  PxiBasestation.cpp  PxiBasestation.h  SimulatedBasestation.cpp  SimulatedBasestation.h  XDAQ.cpp  XDAQ.h
Source/Formats/: IMRO.h  ProbeInterfaceJson.h
Source/Headstages/: Headstage1.cpp  Headstage1.h  Headstage1_v1.cpp  Headstage1_v1.h  Headstage1_v3.cpp  Headstage1_v3.h  Headstage2.cpp  Headstage2.h  Headstage_Analog128.cpp  Headstage_Analog128.h  Headstage_Custom384.cpp  Headstage_Custom384.h  Headstage_Ph2C.cpp  Headstage_Ph2C.h  Headstage_QuadBase.cpp  Headstage_QuadBase.h  SimulatedHeadstage.cpp  SimulatedHeadstage.h
Source/Probes/: CustomPassiveProbe.cpp  CustomPassiveProbe.h  Geometry.cpp  Geometry.h  Neuropixels1.cpp  Neuropixels1.h  Neuropixels1_v1.cpp  Neuropixels1_v1.h  Neuropixels1_v3.cpp  Neuropixels1_v3.h  Neuropixels2.cpp  Neuropixels2.h  NeuropixelsOpto.cpp  NeuropixelsOpto.h  Neuropixels_NHP_Active.cpp  Neuropixels_NHP_Active.h  Neuropixels_NHP_Passive.cpp  Neuropixels_NHP_Passive.h  Neuropixels_Ph2C.cpp  Neuropixels_Ph2C.h  Neuropixels_QuadBase.cpp  Neuropixels_QuadBase.h  Neuropixels_UHD.cpp  Neuropixels_UHD.h  OneBoxADC.cpp  OneBoxADC.h  OneBoxDAC.cpp  OneBoxDAC.h  SimulatedProbe.cpp  SimulatedProbe.h
Source/UI/: ActivityView.cpp  ActivityView.h  AdcInterface.cpp  AdcInterface.h  AnalogPatternGenerator.cpp  AnalogPatternGenerator.h  ColourScheme.cpp  ColourScheme.h  DacInterface.cpp  DacInterface.h  DataPlayer.cpp  DataPlayer.h  NeuropixInterface.cpp  NeuropixInterface.h  OneBoxInterface.cpp  OneBoxInterface.h  ProbeBrowser.cpp  ProbeBrowser.h  ProbeNameConfig.cpp  ProbeNameConfig.h  SettingsInterface.h  SurveyInterface.cpp  SurveyInterface.h  WavePlayer.cpp  WavePlayer.h  XDAQADCInterface.cpp  XDAQADCInterface.h
Source/neuropix-api/: NeuropixAPI.h
